# OhCR

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/top/haoxu13/ohcr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ccv-libs.c  ccv-libs.cpp
app/src/main/java/top/haoxu13/ohcr/: BinarizeProccess.java  Deskewing.java  MainActivity.java  Table.java  TableDetection.java  TextDetection.java
app/src/main/res/drawable/: shape.xml
app/src/main/res/layout/: activity_main.xml  image_layout.xml  textarea_layout.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/top/haoxu13/ohcr/: ExampleUnitTest.java
gen-libs/: build.gradle
gen-libs/src/main/cpp/: CMakeLists.txt
gen-libs/src/main/cpp/ccv/: CMakeLists.txt
gen-libs/src/main/cpp/ccv_swt/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
